# fifa_wc_predictor

./: .gitignore  CLAUDE.md  README.md  fetch_result  prepare_data  pyproject.toml  requirements.txt  resolve_day  run_competition  run_missing_predictions  score_predictions  show_data
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
EDGE/: project.yml
cloudflare_app/: package.json  wrangler.toml
config/: competition_models.json  ensemble_models.json  kicktipp_optimizer.json
docs/: ios_app_plan.md  kicktipp_exploit_engine.md
scripts/: backtest_kicktipp_optimizer.py  backtest_predictions.py  download_worldcup_data.py  ensemble_forecast.py  generate_leverage_tip_sheet.py  generate_tip_sheet.py  kicktipp_watchdog.py  optimize_bonus_questions.py  predict_match_dspy.py  run_hermes_predictions.py  run_model_roster.py  tip_round_optimizer.py  tune_kicktipp_optimizer.py
tests/: test_bonus_optimizer.py  test_data.py  test_ensemble.py  test_kicktipp_archive.py  test_kicktipp_watchdog.py  test_leverage_optimizer.py  test_predict_async.py  test_resolve_day.py  test_results.py  test_run_model_roster.py  test_scoring.py  test_tip_optimizer.py  test_tip_sources.py
worldcup_predictor/: __init__.py  bonus_optimizer.py  cache.py  cli.py  competition.py  data.py  dspy_program.py  ensemble.py  env.py  goal_scorers.py  kicktipp_archive.py  leverage_optimizer.py  models.py  news.py  paths.py  polymarket.py  predict_async.py  predictions.py  prepare.py  prepare_cli.py  resolve_day.py  result_cli.py  results.py  run_missing.py  score_cli.py  (+5 more)
(+206 files in other folders)
