[project]
name = "kicktipp-exploit-engine"
version = "0.2.0"
description = "KickTipp private-league exploit engine: market odds, scoreline EV, friend-field leverage, and bonus-question optimization"
requires-python = ">=3.10"
dependencies = [
    "dspy==3.0.3",
    "pypdf2==3.0.1",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "rich==13.9.4",
]
